Edited port for release and changed swagger specs
